syntax = "proto3";

message Claim {
    int64 uniqueID = 1;
    string claimName = 2;
    bool verified = 3;
}

service ClaimsEnricherService {
    rpc enrichClaim (ClaimQuery) returns (Claim) {}
}

message ClaimQuery {
    int64 orgID = 1;
    int64 uniqueID = 2;
}
